# CatCoin

./: .$CatCoin_Flowchart.drawio.bkp  .gitignore  Cargo.toml  CatCoin_Flowchart.drawio  README.md  cli.py  test.py
client/: Cargo.toml
client/data/: passwd
client/data/keys/: priv_key_0cab3e2f-6ae1-4d07-8b93-f038b8d2f240  priv_key_19c07b55-3ce5-4a6d-8481-77cd9ba89274  priv_key_336eefb3-923e-40f5-97a8-83c885285056  priv_key_68b22c5f-97a0-4126-a6bb-518fd4f39dff  pub_key_0cab3e2f-6ae1-4d07-8b93-f038b8d2f240  pub_key_19c07b55-3ce5-4a6d-8481-77cd9ba89274  pub_key_336eefb3-923e-40f5-97a8-83c885285056  pub_key_68b22c5f-97a0-4126-a6bb-518fd4f39dff
client/data/wallets/: 0cab3e2f-6ae1-4d07-8b93-f038b8d2f240  19c07b55-3ce5-4a6d-8481-77cd9ba89274  336eefb3-923e-40f5-97a8-83c885285056  68b22c5f-97a0-4126-a6bb-518fd4f39dff
client/src/: console.rs  main.rs  wallet.rs
miner/: Cargo.toml
miner/src/: main.rs
node/: Cargo.toml
node/src/: blockchain.rs  comm.rs  lib.rs  main.rs  utils.rs
src/: blockchain.rs  comm.rs  errors.rs  lib.rs  main.rs  protocol.rs  src.rs  utils.rs
test/: cli.py  old_test.py  test  test.py  test2.py
web/: Cargo.toml
web/data/: priv_key.pem  pub_key.pem
web/src/: backend.rs  main.rs
webserver/: Cargo.toml
