[package]
name = "cat_coin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
num-bigint = "0.4.5"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
node = { path = "node" }
miner = { path = "miner" }
rcgen = "0.13.1"

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

[workspace]
members = ["node", "miner", "webserver"]

[[bin]]
name = "webserver"
path = "webserver/src/main.rs"

[[bin]]
name = "node"
path = "node/src/main.rs"

[[bin]]
name = "miner"
path = "miner/src/main.rs"
