[package]
name = "miner"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.0"
num-bigint = "0.4.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
node = { path = "../node" }

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
