[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.0"
bs58 = "0.5.1"
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
num-bigint = "0.4.5"
openssl = "0.10.64"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

[lib]
path = "src/lib.rs"
